--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-streamlit
+# 核心全家桶
 langchain>=0.3.0
 langchain-community>=0.3.0
 langchain-core>=0.3.0
 langchain-openai>=0.2.0
 langchain-text-splitters>=0.3.0
+
+# 向量与模型支持
 sentence-transformers
 faiss-cpu
 pypdf
 tiktoken
+
+# 界面与工具
+streamlit
 watchdog
-beautifulsoup4
-langchain
-langchain-community
-langchain-core
-langchain-openai
