--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 streamlit
 openai
-langchain>=0.3.0
-langchain-community>=0.3.0
-langchain-core>=0.3.0
-langchain-openai>=0.2.0
-langchain-text-splitters>=0.3.0
+langchain==0.3.7
+langchain-core==0.3.12
+langchain-community==0.3.7
+langchain-openai==0.2.3
+langchain-text-splitters==0.3.1
 sentence-transformers
 faiss-cpu
 pypdf
