--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 streamlit
 openai
+
+# ---- LangChain 0.3 稳定兼容组 ----
 langchain==0.3.7
-langchain-core==0.3.12
+langchain-core==0.3.15
 langchain-community==0.3.7
 langchain-openai==0.2.3
 langchain-text-splitters==0.3.1
+
+# ---- Embeddings + Vectorstore ----
 sentence-transformers
 faiss-cpu
 pypdf
